# Library-Manager

./: .gitignore  Data_Manager.html  README.md  Setting_Manager.html  homepage.html  index.html  itch.io_description.md  package.json  test_favorite_priority_fix.js  test_final_priority_sorting.js  test_priority_sorting.js  test_recent_sorting.js  test_sort_persistence.html  verify_implementation.js
Manager Tools/: .gitignore  AI_ELECTRON_BUILD.md  AI_RUST_BUILD.md  CHANGELOG.md  Data_Manager.html  MIGRATION_V2_PLAN.md  Setting_Manager.html  main.js  package-lock.json  package.json  preload.js
Manager Tools/css/: data_manager.css  setting_manager.css
Manager Tools/decrypt/: story-passwords.json
Manager Tools/default_gallery/: homepage.html
Manager Tools/icons/: siyuan-icons.js
Manager Tools/js/: data_manager.js  (+4 more)
Manager Tools/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Manager Tools/src-tauri/capabilities/: default.json
Manager Tools/src-tauri/src/: lib.rs  main.rs
css/: fonts.css  homepage.css  style.css
database/: Homepage_Settings.html  Viewer_Settings.html  catalog.backup.latest.json  catalog.js  catalog.json  fonts.js  fonts.json  homepage_settings.css  settings.js  settings.json  viewer_settings.js
js/: homepage.js  script.js  sfx.js
story/: r20260210-185456.md  r20260211-001017.md  r20260211-001405.md  r20260211-113938.md  r20260211-142057.md  r20260211-143637.md  r20260211-144945.md  r20260212-081642.md  r20260212-082326.md  r20260212-083042.md  r20260214-142221.md  r20260214-142730.md
view/: viewer.css  viewer.html  viewer.js
(+64 files in other folders)
