[package]
name = "xedryk-data-manager-tauri"
version = "1.0.1"
description = "Rust desktop shell for Xedryk Data Manager"
authors = ["Xedryk"]
edition = "2021"

[lib]
name = "xedryk_data_manager_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "xedryk-data-manager-tauri"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
base64 = "0.22"
include_dir = "0.7"
mime_guess = "2"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11", features = ["tray-icon", "image-ico"] }
thiserror = "2"
url = "2"
walkdir = "2"
